# yua

./: .easignore  .gitignore  .npmrc  AI_TEAM_REPORT.md  Agents.md  CLAUDE.md  LICENSE  README.md  YUAN_DESIGN.md  YUA_ADMIN_DESIGN.md  YUA_BACKEND_AUDIT_REPORT.md  YUA_CONSOLE_SDK_DESIGN.md  YUA_DESKTOP_DESIGN.md  YUA_PLATFORM_ADMIN_DESIGN.md  YUA_SDK_WORK_ORDER.md  codex-team.sh  deploy-web.sh  example_generate.py  md_render_inspect.js  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tsconfig.base.json
.claude/: settings.local.json
configs/: model_125m.yaml  model_13b.yaml  model_13b_growth.yaml  model_1b.yaml  model_1b_vision.yaml  model_6b.yaml  model_70b.yaml  model_70b_growth.yaml  model_7b_growth.yaml  model_moe_26b.yaml  model_moe_9b.yaml  tokenizer.yaml
docs/: ADMIN_AUDIT_REPORT.md  FINE_TUNING_GUIDE.md  MODEL_CARD.md  PLATFORM_AUDIT_REPORT.md  SUPPORT_AI_REPORT.md  TOOL_CALL_API.md  YUAN_CODING_AGENT_DESIGN.md  YUA_AGENT_TOOL_DESIGN.md  YUA_BILLING_TOSS_DESIGN.md  YUA_CORE_ARCHITECTURE.md  YUA_DESKTOP_WORK_ORDER.md  YUA_EMBEDDING_API_DESIGN.md  YUA_FRAMEWORK_DESIGN.md  YUA_MEMORY_SYSTEM_REDESIGN.md  YUA_MOBILE_REDESIGN.md  YUA_MULTIPLATFORM_DESIGN.md  architecture.md  engineering-rules.md  product-spec.md  support-ai-architecture.md  tech-debt.md  workflows.md
patches/: expo-modules-core@3.0.29.patch
src/: token_protocol.py
tools/: CONVERT_GUIDE.md  convert_maxtext_moe_to_hf.py
yua-admin/: CLAUDE.md  next.config.js  package.json
yua-backend/: package.json
yua-console/: CLAUDE.md  Dockerfile  Dockerfile.dev  console_tree.txt  next.config.js  package.json  package.json.backup  setup.sh  ssot-folders.sh  tsconfig.json  ubuntu-init-yua.sh  yua.config.js
yua-desktop/: debug-scroll.js  electron-builder.yml  electron.vite.config.ts  package.json  tailwind.config.js  tsconfig.json  vite.renderer.config.ts
yua-mobile/: .easignore  .gitignore  BLUEPRINT.md  CLAUDE.md  GoogleService-Info.plist  (+8 more)
yua-sdk-python/: README.md  pyproject.toml
yua-sdk-python/src/yua/: __init__.py  _client.py  _errors.py  _streaming.py
yua-sdk-python/src/yua/_core/: api_client.py
yua-sdk-python/src/yua/resources/: admin.py  billing.py  embeddings.py
yua-sdk-python/src/yua/resources/chat/: __init__.py  completions.py  messages.py  threads.py
yua-sdk-python/src/yua/types/: chat.py  embedding.py
(+1151 files in other folders)
