[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yua"
version = "0.3.0"
description = "YUA AI SDK — OpenAI-compatible Python client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "YUA", email = "dev@yuaone.com" }]
keywords = ["yua", "ai", "sdk", "llm", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.urls]
Homepage = "https://yuaone.com"

[tool.hatch.build.targets.wheel]
packages = ["src/yua"]
